--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "dougmolineux@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.5.7",
+    "mongodb": "3.5.7",
     "pg": "8.0.3"
   }
 }
